--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,8 @@
-source.. = sources/
-output.. = bin/
+source.. = src
 bin.includes = META-INF/,\
                .
+src.includes = .classpath,\
+               .project,\
+               META-INF/,\
+               build.properties
+               
