--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,4 @@
-source.. = src
+source.. = sources/
+output.. = bin/
 bin.includes = META-INF/,\
                .
-src.includes = .classpath,\
-               .project,\
-               META-INF/,\
-               build.properties
-               
