--- a/build.properties
+++ b/build.properties
@@ -3,3 +3,9 @@ output.. = bin/,\
            target/classes/
 bin.includes = META-INF/,\
                .
+src.includes = .classpath,\
+               .project,\
+               .settings/,\
+               LICENSE-2.0.txt,\
+               build.properties,\
+               pom.xml
