fix use parent osgi

--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <name>fr.imag.adele.cadse.util.io</name>
     <version>2.3.0-SNAPSHOT</version>
     <parent>
-		<artifactId>fr.imag.adele.cadse.parent</artifactId>
+		<artifactId>fr.imag.adele.cadse.parent.osgi</artifactId>
 		<groupId>fr.imag.adele.cadse</groupId>
 		<version>2.3.0-SNAPSHOT</version>
-		<relativePath>../fr.imag.adele.cadse.parent</relativePath>
+		<relativePath>../fr.imag.adele.cadse.parent.osgi</relativePath>
 	</parent>
     
     <build>
