--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>bundle</packaging>
-    <groupId>fr.imag.adele.cadse</groupId>
+    <groupId>fr.imag.adele.cadse.runtime</groupId>
     <artifactId>util.io</artifactId>
     <name>fr.imag.adele.cadse.util.io</name>
     <version>2.3.0-SNAPSHOT</version>
     <parent>
 		<artifactId>fr.imag.adele.cadse.parent.osgi</artifactId>
-		<groupId>fr.imag.adele.cadse</groupId>
+		<groupId>fr.imag.adele.cadse.runtime</groupId>
 		<version>2.3.0-SNAPSHOT</version>
 		<relativePath>../fr.imag.adele.cadse.parent.osgi</relativePath>
 	</parent>
