--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>fr.imag.adele.cadse</groupId>
     <artifactId>util.io</artifactId>
     <name>fr.imag.adele.cadse.util.io</name>
-    <version>2.3.0</version>
+    <version>2.3.1-SNAPSHOT</version>
     <parent>
 		<artifactId>fr.imag.adele.cadse.parent.osgi</artifactId>
 		<groupId>fr.imag.adele.cadse</groupId>
