--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <parent>
 		<artifactId>fr.imag.adele.cadse.parent.osgi</artifactId>
 		<groupId>fr.imag.adele.cadse</groupId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.3.1</version>
 		<relativePath>../fr.imag.adele.cadse.parent.osgi</relativePath>
 	</parent>
         <scm>
